--- a/app/single-benefits.html
+++ b/app/single-benefits.html
@@ -77,49 +77,21 @@
 		<div class="container">
 			<div class="single-content">
 
-				<p>Сегодня мы расскажем вам о 5 ключевых преимуществах бизнеса на Amazon из-за которых и мы в своё время выбрали этот
-				бизнес.</p>
+				<p>Сегодня мы расскажем вам о 5 ключевых преимуществах бизнеса на Amazon из-за которых и мы в своё время выбрали этот бизнес.</p>
 
-				<p><strong>1. Amazon - это 100% онлайн-бизнес.</strong> Развивать бизнес на Amazon реально можно из любой точки мира, т.к. всё, что нужно
-				сделать - это выбрать товар, найти поставщика в Китае, доставить товар на склад Amazon и запустить продажи. Делается это
-				всё удаленно из любой точки мира, нужен только интернет. Большой плюс этого бизнеса в том, что вам не нужно общаться с
-				клиентами и вам не нужны сотрудники, всю рутинную работу берет на себя Amazon. Т.к. у вас нет сотрудников, то в этом
-				бизнесе пропадает человеческий фактор (например, в обычном магазине ваш продавец может нагрубить клиентам и о вас
-				сложится негативное впечатление, на Amazon же всё автоматизированно).</p>
+				<p><strong>1. Amazon — это 100% онлайн-бизнес.</strong> Развивать бизнес на Amazon реально из любой точки мира, т.к. всё, что нужно сделать — это выбрать товар, найти поставщика в Китае или США, доставить товар на склад Amazon и запустить продажи. Делается это всё удаленно из любой точки мира, нужен только интернет. Большой плюс этого бизнеса в том, что вам не нужно общаться с клиентами и вам не нужны сотрудники, всю рутинную работу берет на себя Amazon. Т.к. у вас нет сотрудников, то в этом бизнесе пропадает человеческий фактор (например, в обычном магазине ваш продавец может нагрубить клиентам и о вас сложится негативное впечатление, на Amazon же всё автоматизировано). После 2020 года, в котором случился повсеместный карантин из-за коронавируса, пожалуй не нужно объяснять, почему каждый человек, который заботится о своей финансовой безопасности, должен иметь источник дохода в онлайне.</p>
 
-				<p><strong>2. Продаем товары в на территории США, где рынок гораздо больше, а платежеспособность людей гораздо выше, чем в России и
-				СНГ. Даже продавая товар, который не пользуется особой популярностью и имеет высокую конкуренцию, у вас продажи будут
-				идти лучше, чем если бы вы продавали аналогичный товар по России и СНГ. Ну и самое главное, зарабатываем мы в долларах,
-				а значит нам абсолютно всё равно на все внешние факторы экономики и постоянные падения курса рубля.</p>
+				<p><strong>2. Продаем товары на территории США</strong>, где рынок гораздо больше, а платежеспособность людей гораздо выше, чем в России и СНГ. Даже продавая товар, который не пользуется особой популярностью и имеет высокую конкуренцию, у вас продажи будут идти гораздо лучше, чем если бы вы продавали аналогичный товар по России и СНГ. Ну и самое главное, зарабатываем мы в долларах, а значит нам абсолютно всё равно на все внешние факторы экономики и постоянные падения курса рубля. При этом для того, чтобы зарабатывать от 3000$ в месяц чистой прибыли, вам нужно делать всего лишь 10 продаж в день с чистой прибылью в 10$ с одной продажи. Это вполне реально с учетом того, что на Amazon делается около 30 000 000 продаж ежедневно.</p>
 
-				<p>Кстати, Джефф Безос (создатель Amazon), с недавнего времени №1 в списке Форбс. Как думаете, является ли это
-				доказательством того, что Amazon - это действительно отличная площадка для продаж?!</p>
+				<p>Кстати, Джефф Безос (создатель Amazon), с недавнего времени №1 в списке Forbes, а сам Amazon уже давно входит в 5-ку самых дорогих компаний мира. Как вы думаете, является ли это доказательством того, что Amazon — это действительно перспективная площадка для продаж в интернете, с помощью которой можно хорошо зарабатывать?!</p>
 
-				<p><strong>3. Все автоматизировано самим сервисом Amazon.</strong> Вам не нужно заниматься доставкой товара клиентам - это делает Amazon,
-				вам не нужно заботиться о хранении товара - это делает Amazon, вам не нужно заботиться о возвратах - это делает Amazon,
-				вам не нужно заботиться о приеме оплат - клиенты платят деньги сразу же при покупке на сайте Amazon, т.к. для США это
-				норма (скажите, часто ли у нас в России кто-то что-то покупает прямо на сайте, не пообщавшись с продавцом?). По сути из
-				всех бизнес-процессов есть только закупки (которые можно делать через брокера в Китае), выбор товара для запуска
-				(делается 1 раз для 1 товара), контроль показателей и складских остатков (своевременная закупка товара), и продвижение
-				продукта. Большинство рутинных процессов, на которые приходится тратить время в классическом бизнесе, на себя берет сам
-				Amazon.</p>
+				<p><strong>3. Все автоматизировано самим сервисом Amazon.</strong> Вам не нужно заниматься доставкой товара клиентам — этот процесс забирает на себя Amazon. Вам не нужно заботиться о хранении товара — этим занимается Amazon, предоставляя вам свои склады. Вам не нужно заботиться о возвратах — ими занимается Amazon. Вам не нужно заботиться о приеме оплат - клиенты платят деньги сразу же при покупке на сайте Amazon, т.к. для США это норма (скажите, часто ли у нас в России кто-то что-то покупает прямо на сайте, не пообщавшись с продавцом?). По сути, из всех бизнес-процессов есть только закупки (которые можно делать через брокера в Китае и который нужно производить максимум пару раз в месяц), выбор и анализ товара для запуска (делается 1 раз для 1 товара), контроль показателей и складских остатков (своевременная закупка товара), и продвижение продукта (в зависимости от стратегии занимает разное количество времени). Большинство рутинных процессов, на которые приходится тратить время в классическом бизнесе, на себя берет сам Amazon, тем самым вы экономите огромное количество времени, чтобы заниматься тем, что приносит прибыль.</p>
 
-				<p><strong>4. Низкие вложения,</strong> начать можно с суммы от 6-7 тысяч $ с учетом всех расходов и дополнительных затрат. Скажите честно,
-				какой бизнес можно запустить с такими небольшими вложениями? Даже в России трудно найти такой бизнес, а тут мы работаем
-				на рынок США.</p>
+				<p><strong>4. Низкие вложения</strong>, ведь начать бизнес на Amazon можно с суммы от 6-7 тысяч $ с учетом всех расходов и дополнительных затрат (если вы заказываете магазин “под ключ” у нас, то вы сможете запуститься с этой суммы с учетом стоимости наших услуг). Скажите честно, какой бизнес можно запустить с такими небольшими вложениями? Даже в России трудно найти такой бизнес, а тут мы работаем на рынок США, где цены совершенно другие. Вряд ли возможно найти бизнес с такими низкими вложениями, без постоянных затрат на персонал и аренды помещений, без портящихся продуктов, без человеческого фактора, а также с отличной перспективой роста.</p>
 
-				<p><strong>5. Заработок от 3000$ чистыми в месяц для США - это норма </strong> (т.к. средняя зарплата в США около 3000$, то заработать её на
-				бизнесе в США равносильно заработку 35000 рублей в России). Более того, риск прогореть практически отсутсвует. Даже если
-				вы выберете плохой товар, то товар можно распродать и отбить хотя бы часть вложений. Если вы будете развиваться в этом
-				бизнесе, то потолка заработка там практически нет. Но важно понимать, что прибыль в бизнесе на Amazon напрямую зависит
-				от ваших вложений. Хороший товар дает от 50 до 120% чистой прибыли к вложениям при распродаже партии товара. Поэтому
-				важно понимать, что в бизнесе на Amazon нельзя вложить 1000$ и каждый месяц вынимать из бизнеса десятки тысяч долларов.
-				Прибыль напрямую зависит от вложений в товар.</p>
+				<p><strong>5. Заработок от 3000$ чистыми в месяц для США — это норма</strong> (т.к. средняя зарплата в США около 3000-3500$, то заработать её на бизнесе в США равносильно заработку 35000 рублей в России). Более того, риск прогореть практически отсутствует. Даже если вы выберете плохой товар или если ниша, в которой вы собираетесь торговать, измениться, то товар можно распродать дешевле или просто с меньшей скоростью, при этом вы всегда сможете отбить большую часть своих вложений даже в самом плохом случае. Если вы будете развиваться в этом бизнесе, то потолка заработка в нём практически нет, т.к. вы всегда можете запускать дополнительные товары и увеличивать свой оборот. Но важно понимать, что прибыль в бизнесе на Amazon напрямую зависит от ваших вложений. Хороший товар дает от 50 до 120% чистой прибыли к вложениям при распродаже партии товара. Поэтому важно понимать, что в бизнесе на Amazon нельзя вложить 1000$ и каждый месяц вынимать из бизнеса десятки тысяч долларов. Прибыль напрямую зависит от вложений в товар, но зарабатывать среднюю зарплату по меркам США более чем реально и относительно несложно.</p>
 
-				<p>Если вы внимательно причитали информацию выше и поняли суть, почему бизнес на Amazon так привлекателен, то ваш вопрос
-				стоит запускать продажи на Amazon или нет должен отпасть раз и на всегда. Бизнес на Amazon - это перспективное
-				направление с заработком в долларах. Конечно, бизнес на Amazon это точно такой же бизнес, как и любой другой, со своими
-				нюансами и подводными камнями, и для получения результата на Amazon нужно активно работать.</p>
+				<p>Если вы внимательно причитали статью и поняли суть, почему бизнес на Amazon так привлекателен, особенно для жителей России и СНГ, то ваш вопрос, стоит ли запускать продажи на Amazon или нет, должен отпасть раз и на всегда. Бизнес на Amazon — это перспективное направление с заработком в долларах и с простором для развития. Конечно, бизнес на Amazon — это точно такой же бизнес, как и любой другой, со своими нюансами, рисками, подводными камнями, и для получения результата на Amazon нужно активно работать и развиваться.</p>
 
 				<a href="https://amazing-cash.ru/blog/index-blog.html" class="back-to-blog">Вернуться к списку статей</a>
 
